--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>404 not found</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>404 - Page not found.</title>
 </head>
 <body>
-    <h1>Error 404 - The page you are looking for doesn't exist.</h1>
+    <div class="centered_div"><h1 class="warn">Error 404<br><br> <img src="/images/muscle.gif"><br><br> The page you are looking for doesn't exist.<br><br> Click <a href="/../">here</a> to go to the home page.</h1></div>
 </body>
 </html>
