--- a/public/genres/cars/index.html
+++ b/public/genres/cars/index.html
@@ -38,7 +38,7 @@
         <h2>Kamila's Masochist Game</h2>
       </div></a>
 
-      <a href="/games/KMG"><div class="box">
+      <!-- <a href="/games/KMG"><div class="box">
         <img src="/images/kamila.png" width="100px">
         <h2>Kamila's Masochist Meets The Sadist</h2>
       </div></a>
@@ -47,7 +47,7 @@
         <img src="/images/kamila.png" width="100px">
         <h2>Kamila's Masochist Game</h2>
       </div></a>
-      
+       -->
     </div>
     
     <script src="script.js"></script>
