--- a/404.html
+++ b/404.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <title>404 - Page not found.</title>
+  <link rel="icon" href="/favicon.ico">
 </head>
 <body>
-    <div class="centered_div"><h1 class="warn">Error 404<br><br> <img src="/images/muscle.gif"><br><br> The page you are looking for doesn't exist.<br><br> Click <a href="/../">here</a> to go to the home page.</h1></div>
+    <div class="centered_div"><h1 class="warn">Error 404<br><br> <img src="/images/200w.gif" width="350px"><br><br> The page you are looking for doesn't exist.<br><br> Click <a href="/../">here</a> to go to the home page.</h1></div>
 </body>
 </html>
