--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="icon" href="favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body class="wrapper">
@@ -43,7 +44,7 @@
 
       <a href="404" class="noul"><div class="box">
         <img src="images/question.gif" width="70px">
-        <h2>N/A</h2>
+        <h2>Is A Game Missing?</h2>
       </div></a>
         
       <a href="catagories/discord"><div class="box">
@@ -56,22 +57,22 @@
         <h2>Fan Made Games</h2>
       </div></a>
 
-      <a href="404" class="noul"><div class="box">
+      <a href="catagories/about" class="noul"><div class="box">
         <img src="images/jazzuo.gif" width="78px">
         <h2>About This Site</h2>
       </div></a>
 
-      <a href="404" class="noul"><div class="box">
+      <a href="catagories/news" class="noul"><div class="box">
         <img src="images/GBook.gif" width="100px">
-        <h2>Blog</h2>
+        <h2>News</h2>
       </div></a>
 
-      <a href="404" class="noul"><div class="box">
+      <a href="catagories/contact" class="noul"><div class="box">
         <img src="images/mailbox.gif" width="100px">
         <h2>Contact Us</h2>
       </div></a>
 
-      <a href="404" class="noul"><div class="box">
+      <a href="catagories/links" class="noul"><div class="box">
         <img src="images/linksa.gif" width="100px">
         <h2>Links</h2>
       </div></a>
